Comments and documentation
- Updated README
- Added sample Java security policy
- Updated Main.java with comments